// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer:InputSubForm base 1`] = `
<body
  class="is-modalOpened"
  style="width: calc(100% - 0px);"
>
  <div>
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Panel __AMIS_COMPONENT_CLASS_PREFIX__Panel--default __AMIS_COMPONENT_CLASS_PREFIX__Panel--form"
      data-role="container"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-heading"
      >
        <h3
          class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-title"
        >
          <span
            class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
          >
            <span>
              表单
            </span>
          </span>
        </h3>
      </div>
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-body"
      >
        <form
          class="__AMIS_COMPONENT_CLASS_PREFIX__Form __AMIS_COMPONENT_CLASS_PREFIX__Form--normal"
          novalidate=""
        >
          <input
            style="display: none;"
            type="submit"
          />
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--normal"
            data-amis-name="form"
            data-role="form-item"
          >
            <label
              class="__AMIS_COMPONENT_CLASS_PREFIX__Form-label"
            >
              <span>
                <span
                  class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
                >
                  <span>
                    子Form
                  </span>
                </span>
              </span>
            </label>
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__SubFormControl __AMIS_COMPONENT_CLASS_PREFIX__Form-control"
            >
              <div
                class="__AMIS_COMPONENT_CLASS_PREFIX__SubForm-values"
              >
                <div
                  class="__AMIS_COMPONENT_CLASS_PREFIX__SubForm-value"
                  data-position="bottom"
                  data-tooltip="编辑详情"
                >
                  <span
                    class="__AMIS_COMPONENT_CLASS_PREFIX__SubForm-valueLabel"
                  >
                    <span
                      class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
                    >
                      <span>
                        设置子表单
                      </span>
                    </span>
                  </span>
                  <a
                    class="__AMIS_COMPONENT_CLASS_PREFIX__SubForm-valueEdit"
                  >
                    <icon-mock
                      class="icon icon-pencil"
                      icon="pencil"
                    />
                  </a>
                </div>
              </div>
            </div>
          </div>
        </form>
      </div>
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-footerWrap"
      >
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-btnToolbar __AMIS_COMPONENT_CLASS_PREFIX__Panel-footer"
        >
          <button
            class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--primary __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default"
            type="submit"
          >
            <span>
              提交
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    class="amis-dialog-widget __AMIS_COMPONENT_CLASS_PREFIX__Modal __AMIS_COMPONENT_CLASS_PREFIX__Modal--1th"
    data-amis-theme="cxd"
    role="dialog"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Modal-overlay in"
    />
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Modal-content in"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Modal-header"
      >
        <a
          class="__AMIS_COMPONENT_CLASS_PREFIX__Modal-close"
          data-position="left"
          data-tooltip="关闭"
        >
          <icon-mock
            class="icon icon-close"
            icon="close"
          />
        </a>
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Modal-title"
        >
          配置子表单
        </div>
      </div>
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Modal-body"
        role="dialog-body"
      >
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Form __AMIS_COMPONENT_CLASS_PREFIX__Form--horizontal"
          novalidate=""
        >
          <input
            style="display: none;"
            type="submit"
          />
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--horizontal"
            data-amis-name="a"
            data-role="form-item"
          >
            <label
              class="__AMIS_COMPONENT_CLASS_PREFIX__Form-label __AMIS_COMPONENT_CLASS_PREFIX__Form-itemColumn--normal"
            >
              <span>
                <span
                  class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
                >
                  <span>
                    A
                  </span>
                </span>
              </span>
            </label>
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Form-value"
            >
              <div
                class="__AMIS_COMPONENT_CLASS_PREFIX__Form-control __AMIS_COMPONENT_CLASS_PREFIX__TextControl"
              >
                <div
                  class="__AMIS_COMPONENT_CLASS_PREFIX__TextControl-input"
                >
                  <input
                    autocomplete="off"
                    class=""
                    name="a"
                    placeholder=""
                    size="10"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--horizontal"
            data-amis-name="b"
            data-role="form-item"
          >
            <label
              class="__AMIS_COMPONENT_CLASS_PREFIX__Form-label __AMIS_COMPONENT_CLASS_PREFIX__Form-itemColumn--normal"
            >
              <span>
                <span
                  class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
                >
                  <span>
                    B
                  </span>
                </span>
              </span>
            </label>
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Form-value"
            >
              <div
                class="__AMIS_COMPONENT_CLASS_PREFIX__Form-control __AMIS_COMPONENT_CLASS_PREFIX__TextControl"
              >
                <div
                  class="__AMIS_COMPONENT_CLASS_PREFIX__TextControl-input"
                >
                  <input
                    autocomplete="off"
                    class=""
                    name="b"
                    placeholder=""
                    size="10"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Modal-footer"
      >
        <button
          class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--default __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default"
          type="button"
        >
          <span>
            取消
          </span>
        </button>
        <button
          class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--primary __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default"
          type="button"
        >
          <span>
            确认
          </span>
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`Renderer:InputSubForm with addButtonClassName & itemsClassName & itemClassName & addButtonText & labelField 1`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Panel __AMIS_COMPONENT_CLASS_PREFIX__Panel--default __AMIS_COMPONENT_CLASS_PREFIX__Panel--form"
    data-role="container"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-heading"
    >
      <h3
        class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-title"
      >
        <span
          class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            表单
          </span>
        </span>
      </h3>
    </div>
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-body"
    >
      <form
        class="__AMIS_COMPONENT_CLASS_PREFIX__Form __AMIS_COMPONENT_CLASS_PREFIX__Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--normal"
          data-amis-name="form2"
          data-role="form-item"
        >
          <label
            class="__AMIS_COMPONENT_CLASS_PREFIX__Form-label"
          >
            <span>
              <span
                class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
              >
                <span>
                  多选
                </span>
              </span>
            </span>
          </label>
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__SubFormControl __AMIS_COMPONENT_CLASS_PREFIX__Form-control"
          >
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__SubForm-values items-wrapper"
            >
              <div
                class="__AMIS_COMPONENT_CLASS_PREFIX__SubForm-value item-classname"
              >
                <span
                  class="__AMIS_COMPONENT_CLASS_PREFIX__SubForm-valueLabel"
                >
                  设置
                </span>
                <a
                  class="__AMIS_COMPONENT_CLASS_PREFIX__SubForm-valueEdit"
                  data-index="0"
                >
                  <icon-mock
                    class="icon icon-pencil"
                    icon="pencil"
                  />
                </a>
                <a
                  class="__AMIS_COMPONENT_CLASS_PREFIX__SubForm-valueDel"
                  data-index="0"
                >
                  <icon-mock
                    class="icon icon-close"
                    icon="close"
                  />
                </a>
              </div>
              <div
                class="__AMIS_COMPONENT_CLASS_PREFIX__SubForm-value item-classname"
              >
                <span
                  class="__AMIS_COMPONENT_CLASS_PREFIX__SubForm-valueLabel"
                >
                  设置
                </span>
                <a
                  class="__AMIS_COMPONENT_CLASS_PREFIX__SubForm-valueEdit"
                  data-index="1"
                >
                  <icon-mock
                    class="icon icon-pencil"
                    icon="pencil"
                  />
                </a>
                <a
                  class="__AMIS_COMPONENT_CLASS_PREFIX__SubForm-valueDel"
                  data-index="1"
                >
                  <icon-mock
                    class="icon icon-close"
                    icon="close"
                  />
                </a>
              </div>
            </div>
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__SubForm-toolbar"
            >
              <button
                class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__SubForm-addBtn thisis-add-btn"
                type="button"
              >
                <icon-mock
                  class="icon icon-plus"
                  icon="plus"
                />
                <span>
                  自定义的新增
                </span>
              </button>
            </div>
          </div>
        </div>
      </form>
    </div>
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-footerWrap"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-btnToolbar __AMIS_COMPONENT_CLASS_PREFIX__Panel-footer"
      >
        <button
          class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--primary __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default"
          type="submit"
        >
          <span>
            提交
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:InputSubForm with draggable & addable & removable 1`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Panel __AMIS_COMPONENT_CLASS_PREFIX__Panel--default __AMIS_COMPONENT_CLASS_PREFIX__Panel--form"
    data-role="container"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-heading"
    >
      <h3
        class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-title"
      >
        <span
          class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            表单
          </span>
        </span>
      </h3>
    </div>
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-body"
    >
      <form
        class="__AMIS_COMPONENT_CLASS_PREFIX__Form __AMIS_COMPONENT_CLASS_PREFIX__Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--normal"
          data-amis-name="form"
          data-role="form-item"
        >
          <label
            class="__AMIS_COMPONENT_CLASS_PREFIX__Form-label"
          >
            <span>
              <span
                class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
              >
                <span>
                  子Form
                </span>
              </span>
            </span>
          </label>
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__SubFormControl __AMIS_COMPONENT_CLASS_PREFIX__Form-control"
          >
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__SubForm-values"
            >
              <div
                class="__AMIS_COMPONENT_CLASS_PREFIX__SubForm-value"
              >
                <a
                  class="__AMIS_COMPONENT_CLASS_PREFIX__SubForm-valueDragBar"
                >
                  <icon-mock
                    class="icon icon-drag-bar"
                    icon="drag-bar"
                  />
                </a>
                <span
                  class="__AMIS_COMPONENT_CLASS_PREFIX__SubForm-valueLabel"
                >
                  <span
                    class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
                  >
                    <span>
                      设置val-b-change
                    </span>
                  </span>
                </span>
                <a
                  class="__AMIS_COMPONENT_CLASS_PREFIX__SubForm-valueEdit"
                  data-index="0"
                >
                  <icon-mock
                    class="icon icon-pencil"
                    icon="pencil"
                  />
                </a>
                <a
                  class="__AMIS_COMPONENT_CLASS_PREFIX__SubForm-valueDel"
                  data-index="0"
                >
                  <icon-mock
                    class="icon icon-close"
                    icon="close"
                  />
                </a>
              </div>
              <div
                class="__AMIS_COMPONENT_CLASS_PREFIX__SubForm-value"
              >
                <a
                  class="__AMIS_COMPONENT_CLASS_PREFIX__SubForm-valueDragBar"
                >
                  <icon-mock
                    class="icon icon-drag-bar"
                    icon="drag-bar"
                  />
                </a>
                <span
                  class="__AMIS_COMPONENT_CLASS_PREFIX__SubForm-valueLabel"
                >
                  <span
                    class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
                  >
                    <span>
                      设置val-c
                    </span>
                  </span>
                </span>
                <a
                  class="__AMIS_COMPONENT_CLASS_PREFIX__SubForm-valueEdit"
                  data-index="1"
                >
                  <icon-mock
                    class="icon icon-pencil"
                    icon="pencil"
                  />
                </a>
                <a
                  class="__AMIS_COMPONENT_CLASS_PREFIX__SubForm-valueDel"
                  data-index="1"
                >
                  <icon-mock
                    class="icon icon-close"
                    icon="close"
                  />
                </a>
              </div>
              <div
                class="__AMIS_COMPONENT_CLASS_PREFIX__SubForm-value"
              >
                <a
                  class="__AMIS_COMPONENT_CLASS_PREFIX__SubForm-valueDragBar"
                >
                  <icon-mock
                    class="icon icon-drag-bar"
                    icon="drag-bar"
                  />
                </a>
                <span
                  class="__AMIS_COMPONENT_CLASS_PREFIX__SubForm-valueLabel"
                >
                  <span
                    class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
                  >
                    <span>
                      设置val-d
                    </span>
                  </span>
                </span>
                <a
                  class="__AMIS_COMPONENT_CLASS_PREFIX__SubForm-valueEdit"
                  data-index="2"
                >
                  <icon-mock
                    class="icon icon-pencil"
                    icon="pencil"
                  />
                </a>
                <a
                  class="__AMIS_COMPONENT_CLASS_PREFIX__SubForm-valueDel"
                  data-index="2"
                >
                  <icon-mock
                    class="icon icon-close"
                    icon="close"
                  />
                </a>
              </div>
            </div>
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__SubForm-toolbar"
            >
              <span
                class="__AMIS_COMPONENT_CLASS_PREFIX__Combo-dragableTip"
              />
            </div>
          </div>
        </div>
      </form>
    </div>
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-footerWrap"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-btnToolbar __AMIS_COMPONENT_CLASS_PREFIX__Panel-footer"
      >
        <button
          class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--primary __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default"
          type="submit"
        >
          <span>
            提交
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:InputSubForm with multiple & maxLength & btnLabel 1`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Panel __AMIS_COMPONENT_CLASS_PREFIX__Panel--default __AMIS_COMPONENT_CLASS_PREFIX__Panel--form"
    data-role="container"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-heading"
    >
      <h3
        class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-title"
      >
        <span
          class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            表单
          </span>
        </span>
      </h3>
    </div>
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-body"
    >
      <form
        class="__AMIS_COMPONENT_CLASS_PREFIX__Form __AMIS_COMPONENT_CLASS_PREFIX__Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--normal"
          data-amis-name="form"
          data-role="form-item"
        >
          <label
            class="__AMIS_COMPONENT_CLASS_PREFIX__Form-label"
          >
            <span>
              <span
                class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
              >
                <span>
                  子Form
                </span>
              </span>
            </span>
          </label>
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__SubFormControl __AMIS_COMPONENT_CLASS_PREFIX__Form-control"
          >
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__SubForm-values"
            >
              <div
                class="__AMIS_COMPONENT_CLASS_PREFIX__SubForm-value"
              >
                <span
                  class="__AMIS_COMPONENT_CLASS_PREFIX__SubForm-valueLabel"
                >
                  <span
                    class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
                  >
                    <span>
                      设置val-1-1
                    </span>
                  </span>
                </span>
                <a
                  class="__AMIS_COMPONENT_CLASS_PREFIX__SubForm-valueEdit"
                  data-index="0"
                >
                  <icon-mock
                    class="icon icon-pencil"
                    icon="pencil"
                  />
                </a>
                <a
                  class="__AMIS_COMPONENT_CLASS_PREFIX__SubForm-valueDel"
                  data-index="0"
                >
                  <icon-mock
                    class="icon icon-close"
                    icon="close"
                  />
                </a>
              </div>
              <div
                class="__AMIS_COMPONENT_CLASS_PREFIX__SubForm-value"
              >
                <span
                  class="__AMIS_COMPONENT_CLASS_PREFIX__SubForm-valueLabel"
                >
                  <span
                    class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
                  >
                    <span>
                      设置val-2-1
                    </span>
                  </span>
                </span>
                <a
                  class="__AMIS_COMPONENT_CLASS_PREFIX__SubForm-valueEdit"
                  data-index="1"
                >
                  <icon-mock
                    class="icon icon-pencil"
                    icon="pencil"
                  />
                </a>
                <a
                  class="__AMIS_COMPONENT_CLASS_PREFIX__SubForm-valueDel"
                  data-index="1"
                >
                  <icon-mock
                    class="icon icon-close"
                    icon="close"
                  />
                </a>
              </div>
            </div>
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__SubForm-toolbar"
            >
              <button
                class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__SubForm-addBtn"
                disabled=""
                type="button"
              >
                <icon-mock
                  class="icon icon-plus"
                  icon="plus"
                />
                <span>
                  新增一项
                </span>
              </button>
            </div>
          </div>
        </div>
      </form>
    </div>
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-footerWrap"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-btnToolbar __AMIS_COMPONENT_CLASS_PREFIX__Panel-footer"
      >
        <button
          class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--primary __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default"
          type="submit"
        >
          <span>
            提交
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;
